Deleted margin on index page

--- a/style.css
+++ b/style.css
@@ -48,11 +48,8 @@ h1,h2,h3,h4,h5,h6 {
     margin-right: 5px;
 }
 
-/*------------------------------------Main index */
+/*------------------------------------index */
 
-.article-bild {
-    margin: 50px 0px 50px 0px;
-}
 
 .bild {
     background-position: center;
