--- a/css/style.css
+++ b/css/style.css
@@ -61,20 +61,123 @@ h1,h2,h3,h4,h5,h6 {
     border-radius: 50%;
 }
 
-h1 {
+h1 > div {
+    
     margin-bottom: 25px;
-    animation: rotate 1.2s ease-in-out;
 }
 
-@keyframes rotate {
+.border-right {
+    border-right: 3px solid #555555;
+}
+
+h1 > div:nth-child(1) {
+    animation: myAnimation 0.1s forwards;
+}
+h1 > div:nth-child(2) {
+    animation: myAnimation 0.2s forwards;
+}
+
+h1 > div:nth-child(3) {
+    animation: myAnimation 0.3s forwards;
+}
+
+h1 > div:nth-child(4) {
+    animation: myAnimation 0.4s forwards;
+}
+
+h1 > div:nth-child(5) {
+    animation: myAnimation 0.5s forwards;
+}
+
+h1 > div:nth-child(6) {
+    animation: myAnimation 0.6s forwards;
+}
+
+h1 > div:nth-child(7) {
+    animation: myAnimation 0.7s forwards;
+}
+
+h1 > div:nth-child(8) {
+    animation: myAnimation 0.8s forwards;
+}
+
+h1 > div:nth-child(9) {
+    animation: myAnimation 0.9s forwards;
+}
+
+h1 > div:nth-child(10) {
+    animation: myAnimation 1s forwards;
+}
+
+h1 > div:nth-child(11) {
+    animation: myAnimation 1.1s forwards;
+}
+
+h1 > div:nth-child(12) {
+    animation: myAnimation 1.2s forwards;
+}
+
+
+@keyframes myAnimation {
     0% {
-        transform: rotatex(0deg);
+        transform: rotatey(0deg);
     }
 
     100% {
-        transform: rotatex(360deg);
+        transform: rotatey(360deg);
     }
 }
+
+
+
+
+/* .g {
+    animation: g 1.5s infinite;
+}
+
+.u {
+    animation: u 1.5s infinite;
+    animation-delay: 0.006s;
+}
+.s {
+    animation: s 1.5s infinite;
+    animation-delay: 0.012s;
+} */
+
+
+/* @keyframes g {
+    0% {
+        transform: rotatey(0deg);
+    }
+
+    100% {
+        transform: rotatey(360deg);
+    }
+}
+
+
+
+
+@keyframes u {
+    0% {
+        transform: rotatey(0deg);
+    }
+
+    100% {
+        transform: rotatey(360deg);
+    }
+}
+
+@keyframes s {
+    0% {
+        transform: rotatey(0deg);
+    }
+
+    100% {
+        transform: rotatey(360deg);
+    }
+} */
+
 
 
 .article-lite-om-mig {
