--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 > div {
-    
     margin-bottom: 25px;
+}
+
+div.col-1 {
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
 }
 
 .border-right {
@@ -71,50 +76,50 @@ h1 > div {
 }
 
 h1 > div:nth-child(1) {
-    animation: myAnimation 0.1s forwards;
-}
-h1 > div:nth-child(2) {
     animation: myAnimation 0.2s forwards;
 }
-
-h1 > div:nth-child(3) {
-    animation: myAnimation 0.3s forwards;
-}
-
-h1 > div:nth-child(4) {
+h1 > div:nth-child(2) {
     animation: myAnimation 0.4s forwards;
 }
 
-h1 > div:nth-child(5) {
-    animation: myAnimation 0.5s forwards;
-}
-
-h1 > div:nth-child(6) {
+h1 > div:nth-child(3) {
     animation: myAnimation 0.6s forwards;
 }
 
-h1 > div:nth-child(7) {
-    animation: myAnimation 0.7s forwards;
-}
-
-h1 > div:nth-child(8) {
+h1 > div:nth-child(4) {
     animation: myAnimation 0.8s forwards;
 }
 
-h1 > div:nth-child(9) {
-    animation: myAnimation 0.9s forwards;
-}
-
-h1 > div:nth-child(10) {
+h1 > div:nth-child(5) {
     animation: myAnimation 1s forwards;
 }
 
+h1 > div:nth-child(6) {
+    animation: myAnimation 1.2s forwards;
+}
+
+h1 > div:nth-child(7) {
+    animation: myAnimation 1.4s forwards;
+}
+
+h1 > div:nth-child(8) {
+    animation: myAnimation 1.6s forwards;
+}
+
+h1 > div:nth-child(9) {
+    animation: myAnimation 1.8s forwards;
+}
+
+h1 > div:nth-child(10) {
+    animation: myAnimation 2s forwards;
+}
+
 h1 > div:nth-child(11) {
-    animation: myAnimation 1.1s forwards;
+    animation: myAnimation 2.2s forwards;
 }
 
 h1 > div:nth-child(12) {
-    animation: myAnimation 1.2s forwards;
+    animation: myAnimation 2.4s forwards;
 }
 
 
